--- a/app/assets/stylesheets/themes/_premium.scss
+++ b/app/assets/stylesheets/themes/_premium.scss
@@ -56,6 +56,7 @@
   --color-primary: #8b5cf6;
   --color-primary-dark: #6d28d9;
   --color-primary-light: #a78bfa;
+  --color-config-value-text: var(--color-primary-light);
   --color-primary-lightest: rgba(139, 92, 246, 0.2);
   --color-secondary: #7c3aed;
   --color-secondary-dark: #5b21b6;
